openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weeklyreport-dev
  labels:
    app: weeklyreport-dev
