openshift/04b-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weeklyreport-frontend
  namespace: weeklyreport-dev
  labels:
    app: weeklyreport-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weeklyreport-frontend
  template:
    metadata:
      labels:
        app: weeklyreport-frontend
    spec:
      containers:
        - name: weeklyreport-frontend
          image: weekly-report-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 3
